fix: theming overrides and overflow scroll

--- a/src/components/ComponentDemo/ComponentDemo.module.scss
+++ b/src/components/ComponentDemo/ComponentDemo.module.scss
@@ -105,7 +105,8 @@
   }
 }
 
-.container * {
+.container .preview-container,
+.container .knob-container {
   scrollbar-width: none;
   &::-webkit-scrollbar {
     width: 0 !important;
@@ -335,14 +336,4 @@ fieldset.form-group:last-of-type {
 
 .container :global(.bx--content-switcher-btn) {
   height: 2.5rem;
-}
-
-//not working, why??? TO-DO: need to center single line code snippet
-.container :global(.bx--snippet-single .bx--snippet-container) {
-  margin-top: 0.5rem;
-}
-
-// TO-DO: need to figure out how to properly center tabs demo
-.container :global(.bx--snippet--multi) {
-  background: var(--cds-ui-01, #f4f4f4);
 }
