--- a/src/styles/_overrides.scss
+++ b/src/styles/_overrides.scss
@@ -22,3 +22,38 @@
 .bx--list--ordered {
   margin-left: 0.5rem;
 }
+
+//---------------------------------------
+// Component demo overrides
+//---------------------------------------
+// overriding tokens to use custom properties for zoned theming. these are not being set correctly with the feature flag.
+
+.bx--tooltip {
+  z-index: 1000;
+  background-color: var(--cds-inverse-02, #393939); //bg color not working
+}
+
+.bx--snippet--multi,
+.bx--snippet--single {
+  background: var(--cds-ui-01, #f4f4f4);
+  color: var(--cds-text-01, #161616);
+}
+
+.bx--snippet-single .bx--snippet-container {
+  margin-top: 0.5rem;
+}
+
+.bx--data-table--zebra tbody tr:nth-child(odd) td {
+  background-color: var(--cds-ui-02, #fffff);
+  border-bottom: var(--cds-ui-02, #fffff);
+  border-top: var(--cds-ui-02, #fffff);
+}
+
+.bx--overflow-menu-options {
+  background-color: var(--cds-field-01, #f4f4f4); //not working
+}
+
+.bx--pagination__left .bx--pagination__text,
+.bx--radio-button__label {
+  color: var(--cds-text-01, #161616);
+}
